    that the feature bringing no speedup or even sometimes slowes down
    the emulation !
  - Merged trace cache optimization patch, the trace cache optimization
    is enabled by default when configure with --enable-all-optimizations 
    option, to disable trace cache optimization configure with
        --disable-trace-cache
  - Many minor bugfixes in CPU emulation (both ia32 and x86-64)

- Bochs Internal Debugger and Disassember
  - Many fixes in Bochs internal debugger and disassembler, some debugger
    interfaces significantly changed due transition to the param tree
    architecture
  - Added support for restoring of the CPU state from external file
    directly from Bochs debugger

- Configure and compile
  - Rename configure option --enable-4meg-pages to --enable-large-pages.
    The option enables page size extensions (PSE) which refers to 2M pages
    as well.
  - Removed --enable-save-restore configure option, save/restore feature 
    changed to be one of the basic Bochs features and compiled by default 
    for all configurations.
  - Added new Bochs benchmark mode. To run Bochs in benchmark mode execute
    it with new command line option 'bochs -benchmark time'. The emulation
    will be automatically stopped after 'time' millions of emulation 
    cycles executed.
  - Another very useful option for benchmarking of Bochs could be enabled
    using new 'print_timestamps' directive from .bochsrc:
        print_timestamps: enable=1
  - Added --enable-show-ips option to all configuration scripts used to 
    build release binaries, so all future releases will enjoy IPS display.
  - Enable alignment check in the CPU and #AC exception by default for
    --cpu-level >= 4 (like in real hardware)

- SF patches applied
 [1841421] pic: keep slave_pic.INT and master_pic.IRQ_in bit 2 in sync by Russ Cox
 [1841420] give segment numbers in exception logs by Russ Cox
 [1801696] Allow Intel builds on Mac OS X
 [1830658] Fix >32GB disk banner by Samuel Thibault