@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: paging.cc,v 1.96 2007/12/06 18:35:33 sshwarts Exp $
+// $Id: paging.cc,v 1.97 2007/12/13 17:16:21 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2001  MandrakeSoft S.A.
@@ -1115,7 +1115,7 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       BX_CPU_THIS_PTR address_xlation.pages     = 1;
 
       if (rw == BX_READ) {
-        BX_INSTR_LIN_READ(BX_CPU_ID, laddr, BX_CPU_THIS_PTR address_xlation.paddress1, len);
+        BX_INSTR_LIN_READ(BX_CPU_ID, laddr, BX_CPU_THIS_PTR address_xlation.paddress1, len, xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS,
             BX_CPU_THIS_PTR address_xlation.paddress1, len, data);
       }
@@ -1142,12 +1142,14 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       if (rw == BX_READ) {
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr,
                           BX_CPU_THIS_PTR address_xlation.paddress1,
-                          BX_CPU_THIS_PTR address_xlation.len1);
+                          BX_CPU_THIS_PTR address_xlation.len1,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS, BX_CPU_THIS_PTR address_xlation.paddress1,
                              BX_CPU_THIS_PTR address_xlation.len1, data);
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr + BX_CPU_THIS_PTR address_xlation.len1,
                           BX_CPU_THIS_PTR address_xlation.paddress2,
-                          BX_CPU_THIS_PTR address_xlation.len2);
+                          BX_CPU_THIS_PTR address_xlation.len2,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS, BX_CPU_THIS_PTR address_xlation.paddress2,
                              BX_CPU_THIS_PTR address_xlation.len2,
                              ((Bit8u*)data) + BX_CPU_THIS_PTR address_xlation.len1);
@@ -1170,13 +1172,15 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       if (rw == BX_READ) {
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr,
                           BX_CPU_THIS_PTR address_xlation.paddress1,
-                          BX_CPU_THIS_PTR address_xlation.len1);
+                          BX_CPU_THIS_PTR address_xlation.len1,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS, BX_CPU_THIS_PTR address_xlation.paddress1,
                              BX_CPU_THIS_PTR address_xlation.len1,
                              ((Bit8u*)data) + (len - BX_CPU_THIS_PTR address_xlation.len1));
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr + BX_CPU_THIS_PTR address_xlation.len1,
                           BX_CPU_THIS_PTR address_xlation.paddress2,
-                          BX_CPU_THIS_PTR address_xlation.len2);
+                          BX_CPU_THIS_PTR address_xlation.len2,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS, BX_CPU_THIS_PTR address_xlation.paddress2,
                              BX_CPU_THIS_PTR address_xlation.len2, data);
       }
@@ -1204,7 +1208,7 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       BX_CPU_THIS_PTR address_xlation.paddress1 = laddr;
       BX_CPU_THIS_PTR address_xlation.pages     = 1;
       if (rw == BX_READ) {
-        BX_INSTR_LIN_READ(BX_CPU_ID, laddr, laddr, len);
+        BX_INSTR_LIN_READ(BX_CPU_ID, laddr, laddr, len, xlate_rw);
 #if BX_SupportGuest2HostTLB
         Bit32u tlbIndex = BX_TLB_INDEX_OF(laddr);
         bx_TLB_entry *tlbEntry = &BX_CPU_THIS_PTR TLB.entry[tlbIndex];
@@ -1289,13 +1293,15 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       if (rw == BX_READ) {
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr,
                           BX_CPU_THIS_PTR address_xlation.paddress1,
-                          BX_CPU_THIS_PTR address_xlation.len1);
+                          BX_CPU_THIS_PTR address_xlation.len1,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS,
             BX_CPU_THIS_PTR address_xlation.paddress1,
             BX_CPU_THIS_PTR address_xlation.len1, data);
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr + BX_CPU_THIS_PTR address_xlation.len1,
                           BX_CPU_THIS_PTR address_xlation.paddress2,
-                          BX_CPU_THIS_PTR address_xlation.len2);
+                          BX_CPU_THIS_PTR address_xlation.len2,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS,
             BX_CPU_THIS_PTR address_xlation.paddress2,
             BX_CPU_THIS_PTR address_xlation.len2,
@@ -1321,14 +1327,16 @@ void BX_CPU_C::access_linear(bx_address laddr, unsigned len, unsigned pl, unsign
       if (rw == BX_READ) {
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr,
                           BX_CPU_THIS_PTR address_xlation.paddress1,
-                          BX_CPU_THIS_PTR address_xlation.len1);
+                          BX_CPU_THIS_PTR address_xlation.len1,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS,
             BX_CPU_THIS_PTR address_xlation.paddress1,
             BX_CPU_THIS_PTR address_xlation.len1,
             ((Bit8u*)data) + (len - BX_CPU_THIS_PTR address_xlation.len1));
         BX_INSTR_LIN_READ(BX_CPU_ID, laddr + BX_CPU_THIS_PTR address_xlation.len1,
                           BX_CPU_THIS_PTR address_xlation.paddress2,
-                          BX_CPU_THIS_PTR address_xlation.len2);
+                          BX_CPU_THIS_PTR address_xlation.len2,
+                          xlate_rw);
         BX_CPU_THIS_PTR mem->readPhysicalPage(BX_CPU_THIS,
             BX_CPU_THIS_PTR address_xlation.paddress2,
             BX_CPU_THIS_PTR address_xlation.len2, data);
