@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: instrument.h,v 1.14 2006/01/16 19:47:18 sshwarts Exp $
+// $Id: instrument.h,v 1.15 2007/12/13 17:16:21 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2001  MandrakeSoft S.A.
@@ -165,7 +165,7 @@ extern bxInstrumentation *icpu;
 #  define BX_INSTR_REPEAT_ITERATION(cpu_id, i)
 
 /* memory access */
-#  define BX_INSTR_LIN_READ(cpu_id, lin, phy, len)
+#  define BX_INSTR_LIN_READ(cpu_id, lin, phy, len, rw)
 #  define BX_INSTR_LIN_WRITE(cpu_id, lin, phy, len)
 
 #  define BX_INSTR_MEM_CODE(cpu_id, linear, size)
@@ -228,7 +228,7 @@ extern bxInstrumentation *icpu;
 #  define BX_INSTR_REPEAT_ITERATION(cpu_id, i)
 
 /* memory access */
-#  define BX_INSTR_LIN_READ(cpu_id, lin, phy, len)
+#  define BX_INSTR_LIN_READ(cpu_id, lin, phy, len, rw)
 #  define BX_INSTR_LIN_WRITE(cpu_id, lin, phy, len)
 
 #  define BX_INSTR_MEM_CODE(cpu_id, linear, size)      
