@@ -180,7 +180,7 @@ The  callback  is called each time, when Bochs simulator executes code or data
 memory access. Possible access types are: BX_READ, BX_WRITE and BX_RW.
 
 
-	void bx_instr_lin_read(unsigned cpu, bx_address lin, bx_address phy, unsigned len);
+	void bx_instr_lin_read(unsigned cpu, bx_address lin, bx_address phy, unsigned len, unsigned rw);
 	void bx_instr_lin_write(unsigned cpu, bx_address lin, bx_address phy, unsigned len);
 
 The  callback  is  called  each  time,  when Bochs simulator executes a memory
